# gstreamlink

./: .buildconfig  .gitignore  LICENSE  README.md  meson.build  meson_options.txt  org.gnome.gitlab.spoijaz.streamlinkgtk.json  todo.md
data/: meson.build  org.gnome.gitlab.spoijaz.streamlinkgtk.desktop.in  org.gnome.gitlab.spoijaz.streamlinkgtk.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.metainfo.xml.in  org.gnome.gitlab.spoijaz.streamlinkgtk.plugins.players.vlc.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.plugins.providers.twitch.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.preferences.general.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.preferences.interface.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.preferences.players.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.preferences.providers.gschema.xml  org.gnome.gitlab.spoijaz.streamlinkgtk.preferences.streaming-providers.gschema.xml  org.gnome.gstreamlink.desktop.in  org.gnome.gstreamlink.gschema.xml  org.gnome.gstreamlink.metainfo.xml.in  org.gnome.gstreamlink.plugins.players.generic.gschema.xml  org.gnome.gstreamlink.plugins.players.vlc.gschema.xml  org.gnome.gstreamlink.plugins.providers.twitch.gschema.xml  org.gnome.gstreamlink.preferences.general.gschema.xml  org.gnome.gstreamlink.preferences.players.gschema.xml  org.gnome.gstreamlink.preferences.providers.gschema.xml  org.gnome.gstreamlink.preferences.streaming-providers.gschema.xml
data/icons/: meson.build
data/python/: streamlink_gtk_twitch_oauth_receive.py
data/ui/: meson.build  org.gnome.gstreamlink-plugins.gresource.xml  org.gnome.gstreamlink-shared.gresource.xml  org.gnome.gstreamlink.gresource.xml  streamlink-gtk-plugins.gresource.xml  streamlink-gtk-shared.gresource.xml  streamlink-gtk.gresource.xml  styles.css  window.cmb  window.cmb.ui  window.ui
data/ui/plugins/players/generic/: preferences-widget.ui
data/ui/plugins/players/vlc/: preferences-widget.cmb  preferences-widget.ui
data/ui/plugins/providers/twitch/: preferences-page.ui  preferences-page.ui.cmb
data/ui/plugins/providers/twitch/widgets/: chat-window.ui
data/ui/shared/widgets/providers/default/: resource-stream.cmb  resource-stream.ui  resource-vod.cmb  resource-vod.ui  resource.cmb  resource.ui  scrolled-window-contents.cmb  scrolled-window-contents.ui
data/ui/widgets/: drop-down-plugin-providers.cmb  drop-down-plugin-providers.ui  menu-button-provider-user.cmb  menu-button-provider-user.ui  running-player.cmb  running-player.ui  scrolled-window-running-players.ui  scrolled-window-viewing.cmb
data/ui/widgets/preferences/: general-preferences.ui  page-general.cmb  page-general.ui  page-inteface.cmb  page-interface.ui  page-players.cmb  page-players.ui  page-providers.cmb  page-providers.ui  page-streaming-providers.cmb  page-streaming-providers.ui  player-preferences.ui  preferences-window.cmb  preferences-window.ui  provider-preferences.ui
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  window.vala
src/controllers/: player-plugin-controller.vala  provider-plugin-controller.vala  streaming-provider-plugin-controller.vala
src/models/: plugin-player.vala  plugin-provider.vala  plugin-streaming-provider.vala  plugin.vala
src/plugins/: meson.build
src/plugins/players/generic/: generic-settings.vala  generic.vala
src/plugins/players/generic/widgets/: preferences-group.vala
src/plugins/players/vlc/: vlc-settings.vala  vlc.vala
src/plugins/players/vlc/widgets/: preferences-group.vala
src/plugins/providers/twitch/: twitch-settings.vala  twitch.vala
src/plugins/providers/twitch/models/: api-end-point.vala  contents-id.vala  response.vala
src/plugins/providers/twitch/widgets/: chat-window.vala  preferences-page.vala  sidebar-list-box-row.vala  welcome-window-contents.vala
src/plugins/streaming-providers/streamlink/: streamlink.vala
src/preferences/: app-preferences.vala  general-preferences.vala  page-general.vala  page-interface.vala  page-players.vala  page-providers.vala  page-streaming-providers.vala  player-preferences.vala  preferences-window.vala  provider-preferences.vala
src/shared/: meson.build  scrolled-window-contents.h  streaming-provider.vala
src/shared/interfaces/: i-exec-options.vala  i-player-plugin.vala  i-streaming-provider-plugin.vala
src/shared/interfaces/providers/: i-chat-window.vala  i-provider-plugin.vala  i-scrolled-window-contents.vala  i-sidebar-list-bow-row.vala  i-welcome-window-contents.vala
src/shared/models/: category.vala  channel.vala  contents.vala  key-value.vala  plugin-info.vala  plugin-loader-error.vala  plugin-player.vala  plugin-provider.vala  plugin.vala  provider-user.vala  request-header.vala  resource-channel.vala  resource-stream.vala  resource-vod.vala  resource.vala  running-player.vala  stream.vala  tag.vala  thumbnail.vala  user.vala
src/shared/models/providers/: contents-selector.vala  pagination-cursor.vala
src/shared/services/: api-request.vala  cache.vala  oauth-token-receiver.vala  player-plugin-loader.vala  provider-async-tasks.vala  provider-plugin-loader.vala  streaming-provider-plugin-loader.vala  tools.vala
src/shared/settings/: app-settings.vala  preferences-general-settings.vala  preferences-interface-settings.vala  preferences-players-settings.vala  preferences-providers-settings.vala  preferences-streaming-providers-settings.vala
src/shared/widgets/: category-wrap-box.vala  tags-wrap-box.vala
src/shared/widgets/providers/: running-player.vala  scrolled-window-running-players.vala
src/shared/widgets/providers/default/: resource-stream.vala  resource-vod-play-at-time.vala  resource-vod.vala  resource.vala  scrolled-window-contents.vala
src/widgets/: drop-down-plugin-providers.vala  menu-button-provider-user.vala  sidebar-list-box.vala  tab-page-streaming-scrolled-window.vala  tab-page-streaming.vala
vapi/: .gitignore  app-config.vapi  lib_streamlink_gtk_plugin_player_vlc.vapi  lib_streamlink_gtk_plugin_provider_twitch.vapi  lib_streamlink_gtk_plugin_streaming_provider_streamlink.vapi  lib_streamlink_gtk_shared.vapi
(+8 files in other folders)
