streamlink_gtk_sources = gnome.compile_resources(
	'streamlink-gtk-resources',
	'streamlink-gtk.gresource.xml',
	c_name: 'streamlink_gtk',
)

lib_streamlink_gtk_shared_resources = gnome.compile_resources(
	'streamlink-gtk-shared-resources',
	'streamlink-gtk-shared.gresource.xml',
	c_name: 'streamlink_gtk_shared',
)

lib_streamlink_gtk_plugins_resources = gnome.compile_resources(
	'streamlink-gtk-plugins-resources',
	'streamlink-gtk-plugins.gresource.xml',
	c_name: 'streamlink_gtk_plugins',
)
