streamlink_gtk_sources = gnome.compile_resources(
	'gstreamlink-resources',
	'org.gnome.gstreamlink.gresource.xml',
	c_name: 'streamlink_gtk',
)

lib_streamlink_gtk_shared_resources = gnome.compile_resources(
	'gstreamlink-shared-resources',
	'org.gnome.gstreamlink-shared.gresource.xml',
	c_name: 'streamlink_gtk_shared',
)

lib_streamlink_gtk_plugins_resources = gnome.compile_resources(
	'gstreamlink-plugins-resources',
	'org.gnome.gstreamlink-plugins.gresource.xml',
	c_name: 'streamlink_gtk_plugins',
)
